container/lights.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lights-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lights-deployment
  template:
    metadata:
      labels:
        app: lights-deployment
    spec:
      containers:
      - name: lights-k8s
        image: paddymcbreen/lights-img:1.0
        ports:
        - containerPort: 3000
  
---

apiVersion: v1
kind: Service
metadata:
  name: lights-service
spec:
  selector:
    app: lights-deployment
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
