container/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: ad4ff47e9b0634636afdd760a248fc6d-de6763ff9c4f22c1.elb.eu-west-2.amazonaws.com
    http:
      paths:
      - path: /api/status
        pathType: Prefix
        backend:
          service:
            name: status-service
            port:
              number: 3002
  ingressClassName: nginx
